<resources>
    <string name="app_name">Sri Lanka Railways</string>
    <string name="hello_name">Hello Lahiru!</string>
    <string name="question">Where are you going?</string>
    <string name="search">Search Train</string>
    <string name="reset">Reset</string>
    <string name="view">View More</string>
    <string name="popular_destination">Popular Destination</string>
    <string name="points">Points</string>
    <string name="see_all">See All</string>
    <string name="schedule">Schedule</string>
    <string name="trips">My Trips</string>
    <string name="reservation">Reservation</string>
    <string name="complain">Complain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_title1">Railways App</string>
    <string name="onboard1_description">Efficent Railway App for seamless travel book, book tickets check schedule.</string>
    <string name="nav_home">Home</string>
    <string name="setting">Setting</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_complain">Complain</string>
    <string name="nav_reservation">Reservation</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_profile">Profile</string>
    <string name="railway_department">Sri Lanka Railway Department</string>
    <string name="web_link">www.railway.gov.lk</string>
    <string name="about_app">About App</string>
    <string name="about_description"><![CDATA[Sri Lanka Railways ( SLR ) is a government department functioning under the Ministry of Transport.
     It is a major transport service provider and is the only rail transport organization in the country. SLR transports both passenger and freight.
     At its inception, railway was carrying more freight than passenger. But today, it is passenger oriented.
     SLR’s market share for passenger transport is about 6.0 % and about 0.7 % for goods transport.]]></string>
    <string name="about_app_description">This railway app is superb, offering seamless functionality and convenience for travelers.
        With its intuitive interface and efficient features, navigating train schedules, booking tickets, and managing trips has never been easier.
        Highly recommended for anyone looking for a smooth and stress-free railway experience</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_have_account">If you have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Get ready to explore exciting destinations using our easy-to-use train app!</string>
    <string name="login_txt">Login</string>
    <string name="forgot_password">"Forgot Password? "</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="if_you_havent_account">If you haven\'t account</string>
    <string name="name">Name</string>
    <string name="templeoftooh">Temple of the tooh</string>
    <string name="kandystation">Kandy Railway Station</string>
    <string name="kandyNo">+94111458749</string>
    <string name="tempOfToothDescription"><![CDATA[The Temple of the Sacred Tooth Relic, or Sri Dalada Maligawa is a Buddhist temple in Kandy, Sri Lanka.
    It is located in the royal palace complex of the former Kingdom of Kandy, which houses the relic of the tooth of the Buddha.
    Since ancient times, the relic has played an important role in local politics because it is believed that whoever holds the relic holds the governance of the country.
    The relic was historically held by Sinhalese kings. The temple of the tooth is a World Heritage Site mainly due to the temple and the relic.]]></string>
    <string name="onboard_description1">"Efficient railway app for seamless travel: book tickets, check schedules. "</string>
    <string name="onboard1_title">Railways App</string>
    <string name="onboarding2_title">Discover Routes</string>
    <string name="onboard_description2">Explore diverse routes effortlessly. Find scenic journeys and discover new destinations with our interactive route map.</string>
    <string name="onboard_description3">Stay informed with real-time updates. Get alerts on train schedules, delays, and platform changes instantly.</string>
    <string name="onboard3_title">Stay Updated</string>
    <string name="sigiriya">Sigiriya</string>
    <string name="lorem_short"><![CDATA[Lorem Ipsum is simply dummy text of the printing and typesetting industry.]]></string>
    <string name="viewDetails">View Details</string>
    <string name="complains">Complain</string>
    <string name="complainhead">Submit Your Complaint</string>
    <string name="notification">Notification</string>
    <string name="alertMsgNoftify">5 Notifications recived today</string>
    <string name="stayUpdated">Stay Updated</string>
</resources>