<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_schedule"
            android:title="@string/nav_schedule" />

        <item
            android:id="@+id/nav_reservation"
            android:title="@string/nav_reservation" />

        <item
            android:id="@+id/nav_complain"
            android:title="@string/nav_complain" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/nav_feedback" />

        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us" />

        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
    </group>
</menu>